# daqbuffer

./: .gitignore  Cargo.toml  Readme.md  rustfmt.toml
archapp/: Cargo.toml
archapp/src/: archeng.rs  binnedevents.rs  err.rs  events.rs  eventsitem.rs  generated.rs  lib.rs  parse.rs  parsestub.rs  plainevents.rs  storagemerge.rs  test.rs  timed.rs
archapp/src/archeng/: backreadbuf.rs  blockrefstream.rs  blockstream.rs  configs.rs  datablock.rs  datablockstream.rs  datastream.rs  indexfiles.rs  indextree.rs  pipe.rs  ringbuf.rs
archapp/src/parse/: multi.rs
archapp_wrap/: Cargo.toml
archapp_wrap/src/: lib.rs
commonio/: Cargo.toml
commonio/src/: commonio.rs  ringbuf.rs
crates/commonio/: Cargo.toml
crates/commonio/src/: commonio.rs  ringbuf.rs
crates/daqbuffer/: Cargo.toml  build.rs
crates/daqbuffer/src/: cli.rs  err.rs  fetch.rs  lib.rs
crates/disk/: Cargo.toml
crates/disk/src/: aggtest.rs  cache.rs  channelconfig.rs  dataopen.rs  decode.rs  disk.rs  eventblobs.rs  eventchunker.rs  eventchunkermultifile.rs  eventfilter.rs  frame.rs  gen.rs  index.rs  merge.rs  paths.rs  raw.rs  read3.rs  read4.rs  streamlog.rs
crates/disk/src/agg/: binnedt.rs
crates/disk/src/binned/: pbv.rs
crates/disk/src/merge/: mergedblobsfromremotes.rs
crates/disk/src/raw/: conn.rs  generated.rs
crates/err/: Cargo.toml
crates/err/src/: lib.rs
crates/httpclient/: Cargo.toml
crates/httpclient/src/: httpclient.rs  lib.rs
crates/httpret/: Cargo.toml
crates/httpret/src/: api1.rs  api4.rs  bodystream.rs  cache.rs  channel_status.rs  channelconfig.rs  download.rs  err.rs  gather.rs  httpret.rs  prometheus.rs  proxy.rs  pulsemap.rs  requests.rs  settings.rs
crates/httpret/src/api4/: accounting.rs  binned.rs  databuffer_tools.rs  docs.rs  eventdata.rs  events.rs  maintenance.rs  search.rs  status.rs
crates/httpret/src/proxy/: api1.rs  api4.rs
crates/items_0/: Cargo.toml
crates/items_0/src/: collect_s.rs  framable.rs  isodate.rs  items_0.rs  overlap.rs  scalar_ops.rs  streamitem.rs  subfr.rs  test.rs  timebin.rs  transform.rs
crates/items_0/src/timebin/: timebinimpl.rs
daqbuffer/: Cargo.toml
daqbuffer/src/: cli.rs  client.rs  err.rs  lib.rs  nodes.rs  test.rs
daqbuffer/src/test/: binnedbinary.rs  binnedjson.rs  events.rs  json.rs
daqbufp2/: Cargo.toml
daqbufp2/src/: client.rs  daqbufp2.rs  err.rs  lib.rs  nodes.rs  test.rs
daqbufp2/src/test/: api1.rs  api4.rs  archapp.rs  binnedbinary.rs  binnedjson.rs  events.rs  eventsjson.rs  timeweightedjson.rs
dbconn/: Cargo.toml
dbconn/src/: bincache.rs  channelconfig.rs  dbconn.rs  events_scylla.rs  lib.rs  query.rs  scan.rs  search.rs
dbconn/src/scan/: updatechannelnames.rs
disk/: Cargo.toml
disk/src/: agg.rs  aggtest.rs  binned.rs  binnedstream.rs  cache.rs  channelconfig.rs  channelexec.rs  dataopen.rs  decode.rs  disk.rs  eventblobs.rs  eventchunker.rs  events.rs  frame.rs  gen.rs  index.rs  lib.rs  merge.rs  mergeblobs.rs  paths.rs  query.rs  rangefilter.rs  raw.rs  read3.rs  read4.rs  readat.rs  streamlog.rs
disk/src/agg/: binnedt.rs  binnedt2.rs  binnedt3.rs  binnedt4.rs  binnedx.rs  enp.rs  eventbatch.rs  scalarbinbatch.rs  streams.rs
disk/src/binned/: binnedfrompbv.rs  dim1.rs  pbv.rs  pbv2.rs  prebinned.rs  query.rs  scalar.rs
disk/src/cache/: pbv.rs  pbvfs.rs
disk/src/frame/: inmem.rs  makeframe.rs
disk/src/merge/: mergedblobsfromremotes.rs  mergedfromremotes.rs  mergefromremote.rs
disk/src/raw/: bffr.rs  client.rs  conn.rs  eventsfromframes.rs  generated.rs
dq/: Cargo.toml
dq/src/: dq.rs
err/: Cargo.toml
err/src/: lib.rs
httpclient/: Cargo.toml
httpclient/src/: httpclient.rs  lib.rs
httpret/: Cargo.toml
httpret/src/: api1.rs  api4.rs  bodystream.rs  channel_status.rs  channelarchiver.rs  channelconfig.rs  download.rs  err.rs  events.rs  evinfo.rs  gather.rs  httpret.rs  lib.rs  proxy.rs  pulsemap.rs  search.rs
httpret/src/api1/: configquorum.rs
httpret/src/api4/: binned.rs  events.rs  search.rs  status.rs
httpret/src/proxy/: api1.rs  api4.rs
httpret/static/documentation/: api1.html  api4.html  index.html  page.css  script.js  status-main.html  style.css
items/: Cargo.toml
items/src/: binnedevents.rs  binnernew.rs  binsdim0.rs  binsdim1.rs  eventfull.rs  eventsitem.rs  eventvalues.rs  frame.rs  items.rs  lib.rs  minmaxavgbins.rs  minmaxavgdim1bins.rs  minmaxavgwavebins.rs  numops.rs  plainevents.rs  scalarevents.rs  statsevents.rs  streams.rs  waveevents.rs  xbinnedscalarevents.rs  xbinnedwaveevents.rs
items_0/: Cargo.toml
items_0/src/: collect_c.rs  collect_s.rs  container.rs  isodate.rs  items_0.rs  overlap.rs  scalar_ops.rs  streamitem.rs  subfr.rs  timebin.rs  transform.rs
netfetch/: Cargo.toml
netfetch/src/: bsread.rs  ca.rs  lib.rs  netbuf.rs  netfetch.rs  test.rs  zmtp.rs
netpod/: Cargo.toml
netpod/src/: api1.rs  lib.rs  netpod.rs  query.rs  range.rs  status.rs  streamext.rs  transform.rs
netpod/src/query/: api1.rs  datetime.rs  prebinned.rs
netpod/src/range/: binrange.rs  evrange.rs
nodenet/: Cargo.toml
nodenet/src/: channelconfig.rs  configquorum.rs  conn.rs  lib.rs  nodenet.rs  scylla.rs
nodenet/src/conn/: generator.rs  test.rs
parse/: Cargo.toml
parse/src/: api1_parse.rs  channelconfig.rs  jsonconf.rs  lib.rs  nom2.rs
query/: Cargo.toml
query/src/: transform.rs
query/src/api4/: binned.rs  events.rs
retrieval/: Cargo.toml
retrieval/src/: cli.rs  client.rs  lib.rs  test.rs
retrieval/src/test/: json.rs
scyllaconn/: Cargo.toml
scyllaconn/src/: bincache.rs  config.rs  errconv.rs  events.rs  scyllaconn.rs  status.rs
streams/: Cargo.toml
streams/src/: boxed.rs  collect.rs  dtflags.rs  eventchunker.rs  filechunkread.rs  frames.rs  generators.rs  itemclone.rs  lib.rs  merge.rs  plaineventsjson.rs  rangefilter.rs  rangefilter2.rs  slidebuf.rs  tcprawclient.rs  test.rs  timebin.rs  timebinnedjson.rs  transform.rs
streams/src/frames/: eventsfromframes.rs  inmem.rs
streams/src/merge/: mergedstream.rs
streams/src/test/: collect.rs  timebin.rs
taskrun/: Cargo.toml
taskrun/src/: append.rs  lib.rs  taskrun.rs
(+167 files in other folders)
