[workspace]
members = ["daqbuffer", "h5out", "items", "items_proc", "nodenet", "httpclient", "fsio", "dq"]

[profile.release]
opt-level = 1
debug = 1
overflow-checks = false
debug-assertions = false
lto = "off"
codegen-units = 64
incremental = true

[profile.release2]
inherits = "release"
opt-level = 1
debug = 2
overflow-checks = false
debug-assertions = false
lto = "off"
codegen-units = 32
incremental = true

[patch.crates-io]
#tokio = { git = "https://github.com/dominikwerder/tokio", rev = "995221d8" }
