[workspace]
members = ["daqbuffer", "httpret", "h5out", "items", "items_2", "items_proc", "nodenet", "httpclient", "fsio", "dq"]

[profile.release]
opt-level = 1
debug = 0
overflow-checks = false
debug-assertions = false
lto = "thin"
codegen-units = 128
incremental = true

[profile.release2]
inherits = "release"
opt-level = 1
debug = 2
overflow-checks = false
debug-assertions = false
lto = "off"
codegen-units = 32
incremental = true

[patch.crates-io]
#tokio = { git = "https://github.com/dominikwerder/tokio", rev = "995221d8" }
