[package]
name = "archapp"
version = "0.0.1-a.dev.4"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.4.0", features = ["io-util", "net", "time", "sync", "fs"] }
tracing = "0.1.25"
futures-core = "0.3.14"
futures-util = "0.3.14"
bytes = "1.0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
protobuf = "2.24.1"
err = { path = "../err" }
taskrun = { path = "../taskrun" }
netpod = { path = "../netpod" }
