[package]
name = "commonio"
version = "0.0.2"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2021"

[lib]
path = "src/commonio.rs"

[dependencies]
tokio = { version = "1.21.1", features = ["io-util", "net", "time", "fs"] }
tracing = "0.1"
futures-core = "0.3.15"
futures-util = "0.3.15"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
chrono = "0.4"
async-channel = "1"
parking_lot = "0.11"
crc32fast = "1.2"
err = { path = "../err" }
taskrun = { path = "../taskrun" }
netpod = { path = "../netpod" }
items_0 = { path = "../items_0" }
items_proc = { path = "../items_proc" }
