[package]
name = "daqbufp2"
version = "0.0.1-a.dev.12"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2021"

[lib]
path = "src/daqbufp2.rs"

[dependencies]
tokio = { version = "1.22.0", features = ["rt-multi-thread", "io-util", "net", "time", "sync", "fs"] }
hyper = "0.14"
http = "0.2"
tracing = "0.1.25"
tracing-subscriber = "0.3.16"
futures-util = "0.3.25"
bytes = "1.0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rmp-serde = "1.1.1"
chrono = "0.4"
url = "2.2.2"
lazy_static = "1.4.0"
err = { path = "../err" }
taskrun = { path = "../taskrun" }
netpod = { path = "../netpod" }
httpret = { path = "../httpret" }
httpclient = { path = "../httpclient" }
disk = { path = "../disk" }
items_0 = { path = "../items_0" }
items = { path = "../items" }
streams = { path = "../streams" }

[dev-dependencies]
nom = "7.1.1"
