[package]
name = "dbconn"
version = "0.0.2"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2021"

[lib]
path = "src/dbconn.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.23.0", features = ["time"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
tracing = "0.1.37"
crc32fast = "1.3.2"
byteorder = "1.4"
futures-util = "0.3.25"
bytes = "1.3"
pin-project = "1"
#dashmap = "3"
scylla = "0.7"
async-channel = "1.8.0"
chrono = "0.4"
regex = "1.7.0"
err = { path = "../err" }
netpod = { path = "../netpod" }
parse = { path = "../parse" }
taskrun = { path = "../taskrun" }
