[package]
name = "err"
version = "0.0.2"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2021"

[dependencies]
backtrace = "0.3.56"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.1"
async-channel = "1.6"
chrono = { version = "0.4.19", features = ["serde"] }
url = "2.2"
regex = "1.5.4"
bincode = "1.3.3"
