[package]
name = "err"
version = "0.0.3"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2021"

[dependencies]
backtrace = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
async-channel = "1.6"
chrono = { version = "0.4", features = ["serde"] }
url = "2.2"
regex = "1.5"
bincode = "1.3"
