[package]
name = "httpret"
version = "0.0.1-a.0"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["http1", "http2", "client", "server", "tcp", "stream"] }
http = "0.2"
bytes = "1.0.1"
futures-core = "0.3.12"
tracing = "0.1.25"
serde_json = "1.0"
async-channel = "1.6"
err = { path = "../err" }
netpod = { path = "../netpod" }
disk = { path = "../disk" }
