[package]
name = "items"
version = "0.0.1-a.dev.4"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2021"

[lib]
path = "src/items.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.1"
bincode = "1.3.3"
bytes = "1.0.1"
num-traits = "0.2.14"
tokio = { version = "1.7.1", features = ["fs"] }
chrono = { version = "0.4.19", features = ["serde"] }
crc32fast = "1.2.1"
err = { path = "../err" }
items_proc = { path = "../items_proc" }
netpod = { path = "../netpod" }
