[package]
name = "items_0"
version = "0.0.1"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2021"

[lib]
path = "src/items_0.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3"
serde_json = "1.0"
netpod = { path = "../netpod" }
err = { path = "../err" }
