[package]
name = "netpod"
version = "0.0.1-a.0"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2021"

[lib]
path = "src/netpod.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-channel = "1.6"
bytes = "1.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
futures-core = "0.3.12"
futures-util = "0.3.14"
tracing = "0.1.25"
url = "2.2"
lazy_static = "1.4.0"
num-traits = "0.2"
err = { path = "../err" }
