[package]
name = "netpod"
version = "0.0.2"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2021"

[lib]
path = "src/netpod.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
humantime-serde = "1.1.1"
async-channel = "1.8.0"
bytes = "1.3"
chrono = { version = "0.4.19", features = ["serde"] }
futures-util = "0.3.14"
tracing = "0.1.37"
url = "2.2"
num-traits = "0.2"
err = { path = "../err" }
