[package]
name = "parse"
version = "0.0.1-a.0"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.18.1" }
chrono = { version = "0.4.19", features = ["serde"] }
bytes = "1.0.1"
byteorder = "1.4.3"
hex = "0.4.3"
nom = "6.1.2"
num-traits = "0.2"
num-derive = "0.3"
err = { path = "../err" }
netpod = { path = "../netpod" }
