[package]
name = "query"
version = "0.0.1"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
chrono = { version = "0.4.19", features = ["serde"] }
url = "2.2"
humantime-serde = "1.1.1"
err = { path = "../err" }
netpod = { path = "../netpod" }
items_0 = { path = "../items_0" }
