[package]
name = "retrieval"
version = "0.0.1-a.0"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.4.0", features = ["rt-multi-thread", "io-util", "net", "time", "sync", "fs"] }
hyper = "0.14"
http = "0.2"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
bytes = "1.0.1"
#async-channel = "1"
#dashmap = "3"
tokio-postgres = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
clap = "3.0.0-beta.2"
err = { path = "../err" }
netpod = { path = "../netpod" }
httpret = { path = "../httpret" }
