[package]
name = "daqbuffer"
version = "0.4.4"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2021"

[dependencies]
hyper = "0.14"
http = "0.2"
futures-util = "0.3.14"
bytes = "1.0.1"
#dashmap = "3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.16"
chrono = "0.4"
url = "2.2.2"
clap = { version = "4.3.21", features = ["derive", "cargo"] }
err = { path = "../err" }
taskrun = { path = "../taskrun" }
netpod = { path = "../netpod" }
disk = { path = "../disk" }
daqbufp2 = { path = "../daqbufp2" }
