[package]
name = "daqbuffer"
version = "0.5.0"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2021"

[dependencies]
futures-util = "0.3.29"
bytes = "1.5.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.27"
chrono = "0.4.31"
url = "2.5.0"
clap = { version = "4.4.11", features = ["derive", "cargo"] }
err = { path = "../err" }
taskrun = { path = "../taskrun" }
netpod = { path = "../netpod" }
disk = { path = "../disk" }
httpclient = { path = "../httpclient" }
streams = { path = "../streams" }
daqbufp2 = { path = "../daqbufp2" }
