[package]
name = "disk"
version = "0.0.2"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2021"

[lib]
path = "src/disk.rs"

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_cbor = "0.11.2"
chrono = { version = "0.4.31", features = ["serde"] }
tokio-stream = {version = "0.1.14", features = ["fs"]}
async-channel = "1.9.0"
crossbeam = "0.8.2"
bytes = "1.5.0"
crc32fast = "1.3.2"
arrayref = "0.3.6"
byteorder = "1.5.0"
futures-util = "0.3.14"
async-stream = "0.3.0"
tracing = "0.1.40"
tracing-futures = { version = "0.2.5", features = ["futures-03", "std-future"] }
fs2 = "0.4.3"
libc = "0.2.93"
hex = "0.4.3"
num-traits = "0.2.14"
num-derive = "0.4.0"
url = "2.5.0"
tiny-keccak = { version = "2.0", features = ["sha3"] }
err = { path = "../err" }
taskrun = { path = "../taskrun" }
netpod = { path = "../netpod" }
query = { path = "../query" }
dbconn = { path = "../dbconn" }
parse = { path = "../parse" }
items_0 = { path = "../items_0" }
items_2 = { path = "../items_2" }
streams = { path = "../streams" }
httpclient = { path = "../httpclient" }
bitshuffle = { path = "../bitshuffle" }
