[package]
name = "err"
version = "0.0.4"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies]
backtrace = "0.3.68"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.2"
rmp-serde = "1.1.1"
async-channel = "1.9.0"
chrono = { version = "0.4.26", features = ["serde"] }
url = "2.4.0"
regex = "1.9.1"
http = "0.2.9"
thiserror = { path = "../../../thiserror" }
anyhow = "1.0"
