[package]
name = "err"
version = "0.0.5"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies]
backtrace = "0.3.68"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.2"
rmp-serde = "1.1.1"
async-channel = "1.9.0"
async_channel_2 = { package = "async-channel", version = "2.0.0" }
chrono = { version = "0.4.26", features = ["serde"] }
url = "2.4.0"
regex = "1.9.1"
http = "0.2.9"
http_1 = { package = "http", version = "1.0.0" }
hyper_1 = { package = "hyper", version = "1.0.1" }
thiserror = "=0.0.1"
anyhow = "1.0"
tokio = "1"

[patch.crates-io]
thiserror = { git = "https://github.com/dominikwerder/thiserror.git" }
